--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,8 @@
 
     --main-page-margin: 3em;
 
-    --twitch-height: 225;
-    --twitch-width: 400;
+    --twitch-height: 180px;
+    --twitch-width: 320px;
   }
 }
 
